# ai-setup

./: .gitignore  README.md  pyproject.toml  requirements.txt
ai-setup/: onboarding.py  start.py
ai-setup/features/: clone_ui.py
ai-setup/features/clone_ui/: __init__.py  constants.py  tools.py
ai-setup/tools/: __init__.py
ai-setup/ui/: __init__.py
ui_setup/features/clone_ui/: tools.py
