[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ui-setup"
version = "0.1.1"
description = "If you want to vibe code, at least do it properly."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Joaquim Cassano"}
]
dependencies = [
    "rich>=10.0.0",
    "PyInquirer>=1.0.3",
    "beautifulsoup4>=4.9.0",
    "playwright>=1.20.0",
    "requests>=2.25.0",
    "openai>=0.27.0"
]

[project.scripts]
ui-setup = "ui_setup.start:main"

[tool.setuptools.packages.find]
include = ["ui_setup*"]
